calibre/V2.1.302/PROGS/PYTHON/parse_drc/drcResultsParser.py
# Generated from drcResults.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class drcResultsParser ( Parser ):

    grammarFileName = "drcResults.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'DENSITY_RDBS'", "'NET_AREA_RATIO_RDBS'", 
                     "'DRC_RDBS'", "'DBCLASSIFY_RDBS'", "':'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "MONTH", "WORD", 
                      "RULENAME", "OTHER", "NUMBER", "WS", "NL" ]

    RULE_deck_results = 0
    RULE_header = 1
    RULE_rule_res = 2
    RULE_top_cell = 3
    RULE_db_precision = 4
    RULE_rule_check = 5
    RULE_rdbs_check = 6
    RULE_drc_count = 7
    RULE_orig_drc_count = 8
    RULE_check_text_lines = 9
    RULE_rdb_name = 10
    RULE_rdb_count = 11
    RULE_check_text = 12
    RULE_rdb_errors = 13
    RULE_drc_errors = 14
    RULE_drc_edge = 15
    RULE_drc_poly = 16
    RULE_drc_ordinal = 17
    RULE_drc_point_count = 18
    RULE_drc_e_points = 19
    RULE_drc_p_points = 20
    RULE_drc_e_x1 = 21
    RULE_drc_e_y1 = 22
    RULE_drc_e_x2 = 23
    RULE_drc_e_y2 = 24
    RULE_drc_p_x1 = 25
    RULE_drc_p_y1 = 26
    RULE_month = 27
    RULE_day = 28
    RULE_hour = 29
    RULE_minute = 30
    RULE_sec = 31
    RULE_year = 32
    RULE_date = 33
    RULE_edge = 34
    RULE_poly = 35

    ruleNames =  [ "deck_results", "header", "rule_res", "top_cell", "db_precision", 
                   "rule_check", "rdbs_check", "drc_count", "orig_drc_count", 
                   "check_text_lines", "rdb_name", "rdb_count", "check_text", 
                   "rdb_errors", "drc_errors", "drc_edge", "drc_poly", "drc_ordinal", 
                   "drc_point_count", "drc_e_points", "drc_p_points", "drc_e_x1", 
                   "drc_e_y1", "drc_e_x2", "drc_e_y2", "drc_p_x1", "drc_p_y1", 
                   "month", "day", "hour", "minute", "sec", "year", "date", 
                   "edge", "poly" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    MONTH=7
    WORD=8
    RULENAME=9
    OTHER=10
    NUMBER=11
    WS=12
    NL=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Deck_resultsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(drcResultsParser.HeaderContext,0)


        def EOF(self):
            return self.getToken(drcResultsParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.NL)
            else:
                return self.getToken(drcResultsParser.NL, i)

        def rule_res(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(drcResultsParser.Rule_resContext)
            else:
                return self.getTypedRuleContext(drcResultsParser.Rule_resContext,i)


        def getRuleIndex(self):
            return drcResultsParser.RULE_deck_results

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeck_results" ):
                listener.enterDeck_results(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeck_results" ):
                listener.exitDeck_results(self)




    def deck_results(self):

        localctx = drcResultsParser.Deck_resultsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_deck_results)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.header()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==drcResultsParser.NL:
                self.state = 73
                self.match(drcResultsParser.NL)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.rule_res()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << drcResultsParser.T__0) | (1 << drcResultsParser.T__1) | (1 << drcResultsParser.T__2) | (1 << drcResultsParser.T__3) | (1 << drcResultsParser.WORD) | (1 << drcResultsParser.RULENAME))) != 0)):
                    break

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==drcResultsParser.NL:
                self.state = 84
                self.match(drcResultsParser.NL)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(drcResultsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def top_cell(self):
            return self.getTypedRuleContext(drcResultsParser.Top_cellContext,0)


        def db_precision(self):
            return self.getTypedRuleContext(drcResultsParser.Db_precisionContext,0)


        def NL(self):
            return self.getToken(drcResultsParser.NL, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = drcResultsParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.top_cell()
            self.state = 93
            self.db_precision()
            self.state = 94
            self.match(drcResultsParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_resContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._orig_drc_count = None # Orig_drc_countContext
            self._check_text_lines = None # Check_text_linesContext

        def rule_check(self):
            return self.getTypedRuleContext(drcResultsParser.Rule_checkContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.NL)
            else:
                return self.getToken(drcResultsParser.NL, i)

        def drc_count(self):
            return self.getTypedRuleContext(drcResultsParser.Drc_countContext,0)


        def orig_drc_count(self):
            return self.getTypedRuleContext(drcResultsParser.Orig_drc_countContext,0)


        def check_text_lines(self):
            return self.getTypedRuleContext(drcResultsParser.Check_text_linesContext,0)


        def date(self):
            return self.getTypedRuleContext(drcResultsParser.DateContext,0)


        def check_text(self):
            return self.getTypedRuleContext(drcResultsParser.Check_textContext,0)


        def drc_errors(self):
            return self.getTypedRuleContext(drcResultsParser.Drc_errorsContext,0)


        def rdbs_check(self):
            return self.getTypedRuleContext(drcResultsParser.Rdbs_checkContext,0)


        def rdb_errors(self):
            return self.getTypedRuleContext(drcResultsParser.Rdb_errorsContext,0)


        def getRuleIndex(self):
            return drcResultsParser.RULE_rule_res

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_res" ):
                listener.enterRule_res(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_res" ):
                listener.exitRule_res(self)




    def rule_res(self):

        localctx = drcResultsParser.Rule_resContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule_res)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [drcResultsParser.WORD, drcResultsParser.RULENAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.rule_check()
                self.state = 97
                self.match(drcResultsParser.NL)
                self.state = 98
                self.drc_count()
                self.state = 99
                localctx._orig_drc_count = self.orig_drc_count()
                self.DRC_orig_drc_count = int((None if localctx._orig_drc_count is None else self._input.getText((localctx._orig_drc_count.start,localctx._orig_drc_count.stop))))
                self.state = 101
                localctx._check_text_lines = self.check_text_lines()
                self.DRC_check_text_lines = int((None if localctx._check_text_lines is None else self._input.getText((localctx._check_text_lines.start,localctx._check_text_lines.stop))))
                self.state = 103
                self.date()
                self.state = 104
                self.match(drcResultsParser.NL)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 105
                    self.check_text()
                    pass

                elif la_ == 2:
                    self.state = 106
                    self.match(drcResultsParser.NL)
                    pass


                self.state = 111
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 109
                    self.drc_errors()
                    pass

                elif la_ == 2:
                    self.state = 110
                    self.match(drcResultsParser.NL)
                    pass


                pass
            elif token in [drcResultsParser.T__0, drcResultsParser.T__1, drcResultsParser.T__2, drcResultsParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.rdbs_check()
                self.state = 114
                self.match(drcResultsParser.NL)
                self.state = 115
                self.drc_count()
                self.state = 116
                self.orig_drc_count()
                self.state = 117
                localctx._check_text_lines = self.check_text_lines()
                self.DRC_check_text_lines = int((None if localctx._check_text_lines is None else self._input.getText((localctx._check_text_lines.start,localctx._check_text_lines.stop))))
                self.state = 119
                self.date()
                self.state = 120
                self.match(drcResultsParser.NL)
                self.state = 123
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 121
                    self.rdb_errors()
                    pass

                elif la_ == 2:
                    self.state = 122
                    self.match(drcResultsParser.NL)
                    pass


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Top_cellContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(drcResultsParser.WORD, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_top_cell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop_cell" ):
                listener.enterTop_cell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop_cell" ):
                listener.exitTop_cell(self)




    def top_cell(self):

        localctx = drcResultsParser.Top_cellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_top_cell)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(drcResultsParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Db_precisionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(drcResultsParser.NUMBER, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_db_precision

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDb_precision" ):
                listener.enterDb_precision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDb_precision" ):
                listener.exitDb_precision(self)




    def db_precision(self):

        localctx = drcResultsParser.Db_precisionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_db_precision)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(drcResultsParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_checkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULENAME(self):
            return self.getToken(drcResultsParser.RULENAME, 0)

        def WORD(self):
            return self.getToken(drcResultsParser.WORD, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_rule_check

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_check" ):
                listener.enterRule_check(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_check" ):
                listener.exitRule_check(self)




    def rule_check(self):

        localctx = drcResultsParser.Rule_checkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rule_check)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not(_la==drcResultsParser.WORD or _la==drcResultsParser.RULENAME):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rdbs_checkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return drcResultsParser.RULE_rdbs_check

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRdbs_check" ):
                listener.enterRdbs_check(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRdbs_check" ):
                listener.exitRdbs_check(self)




    def rdbs_check(self):

        localctx = drcResultsParser.Rdbs_checkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rdbs_check)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << drcResultsParser.T__0) | (1 << drcResultsParser.T__1) | (1 << drcResultsParser.T__2) | (1 << drcResultsParser.T__3))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Drc_countContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(drcResultsParser.NUMBER, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_drc_count

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrc_count" ):
                listener.enterDrc_count(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrc_count" ):
                listener.exitDrc_count(self)




    def drc_count(self):

        localctx = drcResultsParser.Drc_countContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_drc_count)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(drcResultsParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Orig_drc_countContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(drcResultsParser.NUMBER, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_orig_drc_count

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrig_drc_count" ):
                listener.enterOrig_drc_count(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrig_drc_count" ):
                listener.exitOrig_drc_count(self)




    def orig_drc_count(self):

        localctx = drcResultsParser.Orig_drc_countContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_orig_drc_count)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(drcResultsParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Check_text_linesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(drcResultsParser.NUMBER, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_check_text_lines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCheck_text_lines" ):
                listener.enterCheck_text_lines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCheck_text_lines" ):
                listener.exitCheck_text_lines(self)




    def check_text_lines(self):

        localctx = drcResultsParser.Check_text_linesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_check_text_lines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(drcResultsParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rdb_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(drcResultsParser.WORD, 0)

        def RULENAME(self):
            return self.getToken(drcResultsParser.RULENAME, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_rdb_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRdb_name" ):
                listener.enterRdb_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRdb_name" ):
                listener.exitRdb_name(self)




    def rdb_name(self):

        localctx = drcResultsParser.Rdb_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rdb_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not(_la==drcResultsParser.WORD or _la==drcResultsParser.RULENAME):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rdb_countContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(drcResultsParser.NUMBER, 0)

        def getRuleIndex(self):
            return drcResultsParser.RULE_rdb_count

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRdb_count" ):
                listener.enterRdb_count(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRdb_count" ):
                listener.exitRdb_count(self)




    def rdb_count(self):

        localctx = drcResultsParser.Rdb_countContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rdb_count)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(drcResultsParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Check_textContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.NL)
            else:
                return self.getToken(drcResultsParser.NL, i)

        def MONTH(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.MONTH)
            else:
                return self.getToken(drcResultsParser.MONTH, i)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.WORD)
            else:
                return self.getToken(drcResultsParser.WORD, i)

        def RULENAME(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.RULENAME)
            else:
                return self.getToken(drcResultsParser.RULENAME, i)

        def OTHER(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.OTHER)
            else:
                return self.getToken(drcResultsParser.OTHER, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.NUMBER)
            else:
                return self.getToken(drcResultsParser.NUMBER, i)

        def rdbs_check(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(drcResultsParser.Rdbs_checkContext)
            else:
                return self.getTypedRuleContext(drcResultsParser.Rdbs_checkContext,i)


        def getRuleIndex(self):
            return drcResultsParser.RULE_check_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCheck_text" ):
                listener.enterCheck_text(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCheck_text" ):
                listener.exitCheck_text(self)




    def check_text(self):

        localctx = drcResultsParser.Check_textContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_check_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self.DRC_check_text_lines == 0: break
                    self.state = 154 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 154
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [drcResultsParser.MONTH]:
                            self.state = 146
                            self.match(drcResultsParser.MONTH)
                            pass
                        elif token in [drcResultsParser.WORD]:
                            self.state = 147
                            self.match(drcResultsParser.WORD)
                            pass
                        elif token in [drcResultsParser.RULENAME]:
                            self.state = 148
                            self.match(drcResultsParser.RULENAME)
                            pass
                        elif token in [drcResultsParser.OTHER]:
                            self.state = 149
                            self.match(drcResultsParser.OTHER)
                            pass
                        elif token in [drcResultsParser.NUMBER]:
                            self.state = 150
                            self.match(drcResultsParser.NUMBER)
                            pass
                        elif token in [drcResultsParser.T__0, drcResultsParser.T__1, drcResultsParser.T__2, drcResultsParser.T__3]:
                            self.state = 151
                            self.rdbs_check()
                            pass
                        elif token in [drcResultsParser.T__4]:
                            self.state = 152
                            self.match(drcResultsParser.T__4)
                            pass
                        elif token in [drcResultsParser.T__5]:
                            self.state = 153
                            self.match(drcResultsParser.T__5)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 156 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << drcResultsParser.T__0) | (1 << drcResultsParser.T__1) | (1 << drcResultsParser.T__2) | (1 << drcResultsParser.T__3) | (1 << drcResultsParser.T__4) | (1 << drcResultsParser.T__5) | (1 << drcResultsParser.MONTH) | (1 << drcResultsParser.WORD) | (1 << drcResultsParser.RULENAME) | (1 << drcResultsParser.OTHER) | (1 << drcResultsParser.NUMBER))) != 0)):
                            break

                    self.state = 158
                    self.match(drcResultsParser.NL)
                    self.DRC_check_text_lines = self.DRC_check_text_lines - 1 
                self.state = 164
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rdb_errorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rdb_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(drcResultsParser.Rdb_nameContext)
            else:
                return self.getTypedRuleContext(drcResultsParser.Rdb_nameContext,i)


        def rdb_count(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(drcResultsParser.Rdb_countContext)
            else:
                return self.getTypedRuleContext(drcResultsParser.Rdb_countContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(drcResultsParser.NL)
            else:
                return self.getToken(drcResultsParser.NL, i)

        def getRuleIndex(self):
            return drcResultsParser.RULE_rdb_errors

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRdb_errors" ):
                listener.enterRdb_errors(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRdb_errors" ):
                listener.exitRdb_errors(self)




    def rdb_errors(self):
